# docs/swagger.json
@@ -3,8 +3,9 @@
     "info": {
         "contact": {}
     },
+    "basePath": "/apis",
     "paths": {
-        "/apis/liveness": {
+        "/liveness": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -23,7 +24,7 @@
                 }
             }
         },
-        "/apis/readiness": {
+        "/readiness": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -48,7 +49,7 @@
                 }
             }
         },
-        "/apis/version": {
+        "/version": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -59,7 +60,7 @@
                 "tags": [
                     "Misc"
                 ],
-                "summary": "Get version of cray-nls service",
+                "summary": "Get version of GPT X-Plane plugin",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -72,6 +73,163 @@
                         "schema": {
                             "$ref": "#/definitions/ResponseError"
                         }
+                    }
+                }
+            }
+        },
+        "/xplm/dataref": {
+            "get": {
+                "security": [
+                    {
+                        "Oauth2Application": [
+                            ""
+                        ]
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Dataref"
+                ],
+                "summary": "Get Dataref",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "xplane dataref string",
+                        "name": "dataref_str",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "alias name, if not set, dataref_str will be used",
+                        "name": "alias",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "-1: raw, 2: round up to two digits",
+                        "name": "precision",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "transform xplane byte array to string",
+                        "name": "is_byte_array",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.DatarefValue"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ResponseError"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "Oauth2Application": [
+                            ""
+                        ]
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Dataref"
+                ],
+                "summary": "Set Dataref",
+                "parameters": [
+                    {
+                        "description": "dataref and value",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.SetDatarefValue"
+                        }
+                    }
+                ],
+                "responses": {
+                    "501": {
+                        "description": "Not Implemented"
+                    }
+                }
+            }
+        },
+        "/xplm/datarefs": {
+            "put": {
+                "security": [
+                    {
+                        "Oauth2Application": [
+                            ""
+                        ]
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Dataref"
+                ],
+                "summary": "Set a list of Dataref",
+                "responses": {
+                    "501": {
+                        "description": "Not Implemented"
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "Oauth2Application": [
+                            ""
+                        ]
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Dataref"
+                ],
+                "summary": "Get a list of Dataref",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.DatarefValue"
+                            }
+                        }
+                    },
+                    "501": {
+                        "description": "Not Implemented"
                     }
                 }
             }
@@ -93,6 +251,32 @@
                     "type": "string"
                 }
             }
+        },
+        "models.DatarefValue": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "value": {}
+            }
+        },
+        "models.SetDatarefValue": {
+            "type": "object",
+            "properties": {
+                "dataref": {
+                    "type": "string"
+                },
+                "value": {}
+            }
+        }
+    },
+    "securityDefinitions": {
+        "": {
+            "type": "oauth2",
+            "flow": "accessCode",
+            "authorizationUrl": "https://pluginlab.xairline.org/oauth/authorize",
+            "tokenUrl": "https://pluginlab.xairline.org/oauth/token"
         }
     }
 }
